--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div id="login-page">
+        <div id="login-form">
+
+        </div>
+        <div id="bg-img">
+            
+        </div>
+    </div>
 </body>
 </html>
