--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login Page</title>
   <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="outer-wrapper" >
@@ -14,26 +15,28 @@
         <img src="background-img.svg" alt="Background" /> 
       </div>
       <!-- side2 (right) with actual login page -->
-      <div id="login-form-wrapper" >
-        <div id="login-form">
-          <div class="toggle-wrapper">
-            <label class="switch">
-              <input type="checkbox" id="loginToggle" />
-              <span class="slider"></span>
-            </label>
-            <span id="login-label">Student Login</span>
-          </div>
+      <!-- <div id="login-form-wrapper" > -->
+        <div id="side2">
+          <h1>Student Login</h1>
+          <!-- <h5>Enter your credentials to explore</h5> -->
+          <form autocomplete="off" id="form-fields">
+            <div class="username-filed">
+              <i class="fa-solid fa-user"></i>
+              <input type="text" placeholder="Enter your Roll No/email" autocomplete="off" />
+            </div>
+            <div class="password-field">
+              <i class="fa-solid fa-lock"></i>
+              <input type="password" placeholder="Enter your Password" value="" autocomplete="off" />
+            </div>
+          <button id="login-btn">Login</button>
+          </form>
 
-          <h2>NBKRIST - QBank</h2>
-          <div id="form-fields">
-            <input type="text" placeholder="Student ID" /><br />
-            <input type="password" placeholder="Password" />
-          </div>
-        </div>
+          <p id="signin-with">Don't have an account?<a href="#signin.html">  signin</a></p>
+
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
