--- a/log-in.html
+++ b/log-in.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login Page</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="log-in.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -12,17 +12,17 @@
     <div id="main-div" >
         <!-- side 1(left) with background img of student styding -->
       <div id="side1">
-        <img src="background-img.svg" alt="Background" /> 
+        <img src="student-login-background.svg" alt="Background" /> 
       </div>
       <!-- side2 (right) with actual login page -->
       <!-- <div id="login-form-wrapper" > -->
         <div id="side2">
-          <h1>Student Login</h1>
+          <h1 style="font-size: 40px; margin-bottom: 30px; ">Student Login</h1>
           <!-- <h5>Enter your credentials to explore</h5> -->
           <form autocomplete="off" id="form-fields">
             <div class="username-filed">
               <i class="fa-solid fa-user"></i>
-              <input type="text" placeholder="Enter your Roll No/email" autocomplete="off" />
+              <input type="text" placeholder="Enter your Roll No/ Email" autocomplete="off" />
             </div>
             <div class="password-field">
               <i class="fa-solid fa-lock"></i>
@@ -31,12 +31,13 @@
           <button id="login-btn">Login</button>
           </form>
 
-          <p id="signin-with">Don't have an account?<a href="#signin.html">  signin</a></p>
+          <p id="signin-with">Don't have an account?<a href="sign-in.html">  sign-in</a></p>
+          
 
       </div>
     <!-- </div> -->
   </div>
 
-  <script src="index.js"></script>
+  <script src="log-in.js"></script>
 </body>
 </html>
